[package]
name = "evm_utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
bytes = "1.3.0"
candid = "0.8.2"
hex = "0.4.3"
ic-cdk = "0.6.0"
ic-cdk-macros = "0.6.0"
rlp = "0.5.2"
serde = "1.0.152"
sha3 = "0.10.6"
