[package]
name = "evm_utils"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/icopen/evm_utils_ic"
license = "MIT"
keywords = ["ic", "evm"]
description = "A utility canister for Internet Computer, allows other canisters to call functions related to EVM"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
bytes = "1.3.0"
candid = "0.8.2"
cita_trie = "4.0.0"
hex = "0.4.3"
ic-cdk = "0.6.0"
ic-cdk-macros = "0.6.0"
rlp = "0.5.2"
secp256k1 = { version = "0.26.0", features = [
  "global-context",
  "recovery",
] }
hasher = { version = "0.1", features = ["hash-keccak"] }
serde = "1.0.152"
sha3 = "0.10.6"
trie-db = "0.25.0"
